FIX og meta tags

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <meta property="og:title" content="{{item.title}}" />
     <meta property="og:description" content="{{item.description}}" />
     <meta property="og:locale" content="fr_CA" />
-    <meta property="og:type" content="product.item" />
+    <meta property="og:type" content="product" />
     <meta property="og:url" content="http://vente-garage.aclement.com/items/{{item.id}}" />
     {{#if item.price}}<meta property="product:price:amount" content="{{item.price}}" />{{/if}}
     <meta property="product:price:currency" content="$" />
@@ -20,6 +20,7 @@
     <meta property="og:title" content="Vente de garage" />
     <meta property="og:description" content="Vente de garage pré-déménagement de Alex et Johann" />
     <meta property="og:locale" content="fr_CA" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="http://vente-garage.aclement.com/images/chat-vente-garage.jpg" />
   {{/if}}
 
