Add item title in page title

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
     <meta property="og:image" content="http://vente-garage.aclement.com/images/chat-vente-garage.jpg" />
   {{/if}}
 
-  <title>Vente de garage</title>
+  <title>Vente de garage{{#if item}} - {{item.title}}{{/if}}</title>
   <meta name="description" content="Vente de garage pré-déménagement de Alex et Johann">
   <meta name="author" content="Alexandre Clément">
 
