--- a/views/items.handlebars
+++ b/views/items.handlebars
@@ -5,21 +5,23 @@
         <h4 class="category-title">{{ name }}</h4>
         <div class="items-list">
           {{#each items}}
-            <a href="{{#if sold }}#{{else}}/items/{{ _id }}{{/if}}" class="card-item four columns{{#if sold }} -sold{{/if}}">
+            <a href="/items/{{ _id }}" class="card-item four columns{{#if sold }} -sold{{/if}}">
               <div class="card-thumbnail" style="background-image: url('{{ image }}');"></div>
               <div class="card-body">
                 <h5>{{ title }}</h5>
-                {{#if sold }}
-                  &mdash;
+
+                {{#if price}}
+                  <p class="price">
+                    {{ price }} $
+                    {{#if originalPrice}}<span class="original-price">{{ originalPrice }} $</span>{{/if}}
+                  </p>
                 {{else}}
-                  {{#if price}}
-                    <p class="price">
-                      {{ price }} $
-                      {{#if originalPrice}}<span class="original-price">{{ originalPrice }} $</span>{{/if}}
-                    </p>
-                  {{else}}
-                    <p class="price -free">À donner</p>
-                  {{/if}}
+                  <p class="price -free">
+                    {{#if sold }}
+                      &mdash;
+                    {{else}}
+                      À donner
+                    {{/if}}</p>
                 {{/if}}
               </div>
               {{#if sold }}<div class="sold-banner">Vendu</div>{{/if}}
