--- a/views/partials/buying-info.handlebars
+++ b/views/partials/buying-info.handlebars
@@ -1,4 +1,4 @@
-<div class="selling-notice">
+<div class="buying-info">
   <div class="left">
     <div class="sellers">
       <div class="thumbnail" style="background-image: url('images/johann.jpg')"></div>
