--- a/views/items.handlebars
+++ b/views/items.handlebars
@@ -2,30 +2,10 @@
   <div class="row">
     {{#each categories}}
       {{#if items.length}}
-        <h4 class="category-title">{{ name }}</h4>
+        <h4 class="category-title"><a href="/categorie/{{slug}}">{{ name }}</a></h4>
         <div class="items-list">
           {{#each items}}
-            <a href="/items/{{ _id }}" class="card-item four columns{{#if sold }} -sold{{/if}}">
-              <div class="card-thumbnail" style="background-image: url('{{ image }}');"></div>
-              <div class="card-body">
-                <h5>{{ title }}</h5>
-
-                {{#if price}}
-                  <p class="price">
-                    {{ price }} $
-                    {{#if originalPrice}}<span class="original-price">{{ originalPrice }} $</span>{{/if}}
-                  </p>
-                {{else}}
-                  <p class="price -free">
-                    {{#if sold }}
-                      &mdash;
-                    {{else}}
-                      À donner
-                    {{/if}}</p>
-                {{/if}}
-              </div>
-              {{#if sold }}<div class="sold-banner">Vendu</div>{{/if}}
-            </a>
+            {{> card-item}}
           {{/each}}
       </div>
       {{/if}}
